--- a/index.html
+++ b/index.html
@@ -34,14 +34,21 @@
                 </div>
                 <div class="uk-card uk-card-secondary uk-card-body uk-card-hover">
                     <div class="uk-width-auto uk-padding-small">
-                        <a class="uk-comment-avater" uk-icon="twitter" width="80" height="80"></a>
+                        <a class="uk-comment-avater" uk-icon="twitter" width="80" height="80"
+                           href="https://mobile.twitter.com/hello_counter"></a>
                     </div>
                     <div class="uk-width-expand">
-                        <h4 class="uk-comment-title uk-margin-remove"><a class="uk-link-reset"
-                                                                         href="#">Twitter毎日更新中！</a></h4>
+                        <h4 class="uk-comment-title uk-margin-remove">
+                            <a class="uk-link-reset">
+                                Twitter毎日更新中！
+                            </a>
+                        </h4>
                         <ul class="uk-comment-meta uk-subnav uk-subnav-divider uk-margin-remove-top">
-                            <li><a href="#">@hello_counter</a></li>
-
+                            <li>
+                                <a href="https://mobile.twitter.com/hello_counter">
+                                    @hello_counter
+                                </a>
+                            </li>
                         </ul>
                         <p>Twitterで毎日，再生回数の表とグラフ，再生回数トップ3を公開しています！ぜひフォローしてください！
                         </p>
