--- a/index.html
+++ b/index.html
@@ -55,10 +55,26 @@
                     </div>
                 </div>
             </div>
-
         </div>
 
     </div>
+
+</div>
+<div class="uk-section-default uk-card-default uk-container">
+    <form>
+        <fieldset class="uk-fieldset">
+
+            <legend class="uk-legend uk-text-center uk-margin-top">グループ名</legend>
+            <div class="uk-margin">
+                <label>
+                    <select class="uk-select" name="group">
+                        <option value="01">Option 01</option>
+                        <option value="02">Option 02</option>
+                    </select>
+                </label>
+            </div>
+        </fieldset>
+    </form>
 </div>
 </body>
 </html>
