--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
                     <p>グラフ右部の凡例の色線部分をダブルクリックすると，その曲だけののグラフを表示することができます。</p>
                     <p>また，グラフ上でクリック＆ドラッグすると，その四角部分を拡大して表示できます。<br>
                         グラフの何もないところをダブルクリックすると拡大表示をリセットできます。<br>
-                    グラフの右上部に表示を操作する機能があるので利用してください。<br>
-                    特に「Show closest data on hover」を押すと，マウス追従の表示が減ってグラフが見やすくなります。</p>
+                        グラフの右上部に表示を操作する機能があるので利用してください。</p>
                 </div>
                 <div>
                     <div class="uk-card uk-card-secondary uk-card-body uk-card-hover">
@@ -75,12 +74,7 @@
             <legend class="uk-legend uk-text-center uk-margin-top">グループ名</legend>
             <div class="uk-margin">
                 <label>
-                    <select class="uk-select" name="group" id="group" onchange="inputChange(this)">
-                        <option value="01">Option 01</option>
-                        <option value="02">Option 02</option>
-                        <option value="03">Option 03</option>
-                        <option value="04">Option 04</option>
-                        <option value="05">Option 05</option>
+                    <select class="uk-select" id="group" onchange="inputChange(this)">
                     </select>
                 </label>
             </div>
