とりあえず，done

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <title>Yo!</title>
+    <title>グラフ表示用ページ</title>
 
 
     <!-- UIkit CSS -->
