--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     </form>
 </div>
 <div class="uk-section-default uk-card-default uk-container-expand">
-    <div id="plot" style="height: 100vh;width: 98vw">
+    <div id="plot" style="height: calc(100vh - 134px);width: 98vw">
 
     </div>
 </div>
