--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <script src="asset/misc.js"></script>
 
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="YouTube再生回数表示ページ">
-    <meta name="twitter:description" content="Hello!Projectやアップフロント所属アーティストのYouTubeチャンネルにあるMVの再生回数を毎日記録してグラフで表示するサイトです。いろいろに表示を変えて見ることができます。">
-    <meta name="twitter:image" content="">
+    <meta name="og:title" content="YouTube再生回数表示ページ">
+    <meta name="og:description" content="Hello!Projectやアップフロント所属アーティストのYouTubeチャンネルにあるMVの再生回数を毎日記録してグラフで表示するサイトです。いろいろに表示を変えて見ることができます。">
+    <meta name="og:image" content="https://yayoimizuha.github.io/youtube-viewcount-logger-web/asset/ogp.png">
 </head>
 <body>
 <div class="uk-section-default uk-light">
