--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="og:title" content="YouTube再生回数表示ページ">
     <meta name="og:description" content="Hello!Projectやアップフロント所属アーティストのYouTubeチャンネルにあるMVの再生回数を毎日記録してグラフで表示するサイトです。いろいろに表示を変えて見ることができます。">
-    <meta name="og:image" content="https://yayoimizuha.github.io/youtube-viewcount-logger-web/asset/ogp.png">
+    <meta name="og:image" content="https://viewcount-logger-20043.web.app/asset/ogp.png">
 </head>
 <body>
 <div class="uk-section-default uk-light">
