add Google Analytics

--- a/index.html
+++ b/index.html
@@ -17,8 +17,23 @@
 
     <meta name="twitter:card" content="summary_large_image">
     <meta name="og:title" content="YouTube再生回数表示ページ">
-    <meta name="og:description" content="Hello!Projectやアップフロント所属アーティストのYouTubeチャンネルにあるMVの再生回数を毎日記録してグラフで表示するサイトです。いろいろに表示を変えて見ることができます。">
+    <meta name="og:description"
+          content="Hello!Projectやアップフロント所属アーティストのYouTubeチャンネルにあるMVの再生回数を毎日記録してグラフで表示するサイトです。いろいろに表示を変えて見ることができます。">
     <meta name="og:image" content="https://viewcount-logger-20043.web.app/asset/ogp.png">
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-254EH2X2X2"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+
+        gtag('js', new Date());
+
+        gtag('config', 'G-254EH2X2X2');
+    </script>
 </head>
 <body>
 <div class="uk-section-default uk-light">
