page transition code.

--- a/index.html
+++ b/index.html
@@ -90,15 +90,16 @@
             <legend class="uk-legend uk-text-center" style="padding-top: 1vh">グループ名を選択：</legend>
             <div class="uk-margin">
                 <label>
-                    <select class="uk-select" id="group" onchange="inputChange(this)"
+                    <select class="uk-select" id="group" onchange="inputChange(this);update_url_param('onchange')"
                             style="cursor: pointer;border-radius: 4px 4px 4px 4px;border: 2px solid lightpink">
+                        <option value="" hidden>--選択してください。--</option>
                     </select>
                 </label>
             </div>
         </fieldset>
     </form>
 </div>
-<div class="uk-section-default uk-card-default uk-container-expand">
+<div class="uk-section-default uk-card-default uk-container-expand" hidden id="graph_canvas">
     <div id="plot" style="height: calc(100vh - 400px / 3);width: 98vw">
 
     </div>
