add GA for pull down change

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 <label>
                     <select class="uk-select" id="group" onchange="inputChange(this);update_url_param('onchange')"
                             style="cursor: pointer;border-radius: 4px 4px 4px 4px;border: 2px solid lightpink">
-                        <option value="" hidden>--選択してください。--</option>
+                        <option value="" hidden>--選択してください--</option>
                     </select>
                 </label>
             </div>
